--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.15.2",
     "node-readability": "^2.2.0",
     "request": "^2.81.0",
-    "retext-keywords": "^3.1.0"
+    "retext-keywords": "^3.1.0",
+    "url-join": "^1.1.0"
   },
   "devDependencies": {
     "babel": "^6.23.0",
