--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon --exec babel-node --use_strict es6/index.js",
     "build": "babel es6 --out-dir es5 --source-maps",
     "watch": "babel es6 --out-dir es5 --source-maps --watch",
-    "flow": "flow; test $? -eq 0 -o $? -eq 2"
+    "flow": "flow; test $? -eq 0 -o $? -eq 2",
+    "test": "mocha --compilers js:babel-core/register --reporter spec"
   },
   "author": "Mike Chen",
   "license": "ISC",
@@ -25,6 +26,9 @@
     "babel-cli": "^6.23.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
-    "flow-bin": "^0.41.0"
-  }
+    "flow-bin": "^0.41.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  },
+  "repository": "https://github.com/cyc115/ZipRecruiterHelper.git"
 }
